# guardian

./: .editorconfig  .gitignore  .lefthook.yml  .markdownlint.jsonc  404.html  LICENSE  README.md  README_de.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: gh-page.yml
developer/: index.html
developer/code_review_guardian_daemon/: index.html
developer/curfew_implementation/: index.html
developer/daemon_implementation_notes/: index.html
developer/dependency_workflow/: index.html
docs/: conf.py  index.md  index.rst
docs/developer/: code_review_guardian_daemon.md  curfew_implementation.md  daemon_implementation_notes.md  dependency_workflow.md  index.md
docs/home/: quickstart.md
docs/reference/: agent.md  ctl.md  daemon.md  guardian_daemon.md  hub.md
guardian_agent/: __init__.py  pyproject.toml
guardian_agent/guardian_agent/: __main__.py  agent_path_lock.txt  lock_events.py  logging.py  main.py
guardian_daemon/: .lefthook.yml  README.md  __init__.py  alembic.ini  config.yaml.old  default-config.yaml  enforcer.py  ipc.py  main.py  mkdocs.yml  pam_manager.py  policy.py  pyproject.toml  pytest.ini  sessions.py  storage.py  systemd_manager.py
guardian_daemon/alembic/: env.py
guardian_daemon/alembic/versions/: 001_initial_schema.py
guardian_daemon/docs/: index.md
guardian_daemon/guardian_daemon/: __main__.py  config.py  enforcer.py  ipc.py  logging.py  main.py  models.py  net_client.py  pam_manager.py  policy.py  sessions.py  storage.py  storage.py.backup  systemd_manager.py  user_manager.py
guardian_daemon/tests/: conftest.py  test_bugfixes_session_tracking.py  test_config.py  test_config_extended.py  test_config_reload.py  test_enforcer.py  test_enforcer_notifications.py  test_enforcer_throttling.py  test_ipc.py  test_ipc_extended.py  test_models.py  test_policy.py  test_policy_extended.py  test_session_uid_fix.py  test_sessions.py  test_sessions_extended.py  test_sessions_simple.py  test_setup_errors.py  test_storage.py  test_storage_merge.py  test_subprocess_timeouts.py  test_systemd_manager_extended.py  test_user_manager.py  test_user_manager_extended.py
guardian_hub/: __init__.py  pyproject.toml
guardian_hub/guardian_hub/: api.py  db.py  main.py  models.py
guardianctl/: README.md  __init__.py  pyproject.toml
guardianctl/guardianctl/: cli.py  main.py
home/quickstart/: index.html
reference/agent/: index.html
reference/ctl/: index.html
reference/daemon/: index.html
reference/hub/: index.html
scripts/: deploy_and_test.sh  gen_docs.sh  install_artifacts.py
search/: search_index.json
systemd_units/system/: guardian_daemon.service
systemd_units/user/: guardian_agent.service
tests/: test_multi_agent_scenario.py
