[project]
name = "guardian"
version = "0.1.0"
description = "Multi-device parental control system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = false
follow_imports = "normal"
namespace_packages = true
mypy_path = "guardian_daemon"
exclude = "(^|/)__init__\\.py$"

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true

[tool.uv.workspace]
members = ["*/"]
exclude = ["scripts", "docs", "tests"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.0.1",
    "lefthook>=1.13.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]
