[project]
name = "guardian-agent"
version = "0.1.0"
description = "Multi-device parental control system - Userspace Agent"
authors = [{ name = "Phillip Stockmann", email = "ZyanKLee@users.noreply.github.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbus-next>=0.2.3",
    "psutil>=7.1.0",
    "pyyaml>=6.0.2",
    "structlog>=25.4.0",
    "types-psutil>=7.0.0.20250822",
]

[dependency-groups]
dev = [
    "types-psutil>=7.0.0.20250822",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "coverage>=7.4.3",
]
