[project]
name = "guardian_daemon"
version = "0.1.0"
description = "Multi-device parental control system - Daemon"
authors = [{ name = "Phillip Stockmann", email = "ZyanKLee@users.noreply.github.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbus-next>=0.2.3",
    "pyyaml>=6.0.2",
    "structlog>=25.4.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
]

[dependency-groups]
dev = [
    "pip>=25.2",
    "types-pyyaml>=6.0.12.20250915",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.5",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.4.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.5",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.4.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["guardian_daemon*"]
exclude = ["tests*", "alembic*"]

[tool.pytest.ini_options]
minversion = "8.4"
addopts = "-v --tb=short --cov=guardian_daemon --cov-report=html"
testpaths = ["tests"]
pythonpath = ["."]


