[project]
name = "guardian-hub"
version = "0.1.0"
description = "Multi-device parental control system - System Hub"
authors = [{ name = "Phillip Stockmann", email = "ZyanKLee@users.noreply.github.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "lefthook>=1.13.1",
    "mypy>=1.18.1",
]
