[project]
name = "guardian-hub"
version = "0.1.0"
description = "Multi-device parental control system - System Hub"
authors = [{ name = "Phillip Stockmann", email = "ZyanKLee@users.noreply.github.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "coverage>=7.4.3",
]
