[project]
name = "guardianctl"
version = "0.1.0"
description = "Multi-device parental control system - Command Line Interface"
authors = [{ name = "Phillip Stockmann", email = "ZyanKLee@users.noreply.github.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.17.4",
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=4.1.0",
    "coverage>=7.4.3",
]
